--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "node --inspect --expose-gc ./node_modules/.bin/jest --log-heap-usage --runInBand --verbose",
+    "test": "node --experimental-vm-modules --inspect --expose-gc ./node_modules/.bin/jest --detectOpenHandles --log-heap-usage --runInBand --verbose",
     "test:watch": "npm run test -- --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -40,10 +40,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "mockserver-client": "^5.15.0",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "testcontainers": "^8.16.0",
+    "testcontainers": "^9.11.0",
     "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
@@ -65,6 +67,8 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalSetup": "../test/setup.ts",
+    "globalTeardown": "../test/teardown.ts"
   }
 }
